--- a/连接查询.md
+++ b/连接查询.md
@@ -1,12 +1,12 @@
-Ë¼¿¼£ºµ±ĞèÒª²éÑ¯¶àÕÅ±íÖĞµÄÊı¾İÊ±£¬Ò»ÕÅÒ»ÕÅ²éÑ¯ĞèÒª¶à´ÎÍ¨Ñ¶£¬Ôì³ÉĞÔÄÜÀË·Ñ£¬  
-¿É²»¿ÉÒÔÒ»´ÎTCPÁ¬½ÓÍ¨Ñ¶£¬²éÑ¯¶àÕÅ±í£¿  
-´ğ£º¿ÉÒÔ  
-## Á¬½Ó²éÑ¯
-Á¬½Ó²éÑ¯·İÄÚÁ¬½Ó²éÑ¯£¨½»¼¯£©ºÍÍâÁ¬½Ó²éÑ¯£¬ÍâÁ¬½Ó²éÑ¯ÓÖ·ÖÎªleftÁ¬½Ó²éÑ¯ºÍrightÁ¬½Ó²éÑ¯  
-ÄÚÁ¬½Ó£ºÁ½ÕÅ±íµÄ¹«¹²²¿·Ö  
-leftÁ¬½Ó£º±íÒ»µÄË½ÓĞ²¿·Ö  
-rightÁ¬½Ó£º±í¶şµÄË½ÓĞ²¿·Ö  
-### ÄÚÁ¬½Ó²éÑ¯
+æ€è€ƒï¼šå½“éœ€è¦æŸ¥è¯¢å¤šå¼ è¡¨ä¸­çš„æ•°æ®æ—¶ï¼Œä¸€å¼ ä¸€å¼ æŸ¥è¯¢éœ€è¦å¤šæ¬¡é€šè®¯ï¼Œé€ æˆæ€§èƒ½æµªè´¹ï¼Œ  
+å¯ä¸å¯ä»¥ä¸€æ¬¡TCPè¿æ¥é€šè®¯ï¼ŒæŸ¥è¯¢å¤šå¼ è¡¨ï¼Ÿ  
+ç­”ï¼šå¯ä»¥  
+## è¿æ¥æŸ¥è¯¢
+è¿æ¥æŸ¥è¯¢ä»½å†…è¿æ¥æŸ¥è¯¢ï¼ˆäº¤é›†ï¼‰å’Œå¤–è¿æ¥æŸ¥è¯¢ï¼Œå¤–è¿æ¥æŸ¥è¯¢åˆåˆ†ä¸ºleftè¿æ¥æŸ¥è¯¢å’Œrightè¿æ¥æŸ¥è¯¢  
+å†…è¿æ¥ï¼šä¸¤å¼ è¡¨çš„å…¬å…±éƒ¨åˆ†  
+leftè¿æ¥ï¼šè¡¨ä¸€çš„ç§æœ‰éƒ¨åˆ†  
+rightè¿æ¥ï¼šè¡¨äºŒçš„ç§æœ‰éƒ¨åˆ†  
+### å†…è¿æ¥æŸ¥è¯¢
 ```
 +-------------------------------+
 |  left   |    inner    |  left |
@@ -15,7 +15,7 @@ rightÁ¬½Ó£º±í¶şµÄË½ÓĞ²¿·Ö
 ```
 
 ```mysql
-³¡¾°Ò»£º Ñ§Éú ¿Î³Ì ¿¼ÊÔ½á¹û
+åœºæ™¯ä¸€ï¼š å­¦ç”Ÿ è¯¾ç¨‹ è€ƒè¯•ç»“æœ
 student: uid name age sex
 course:  cid cname credit
 exame:   uid cid time score
@@ -47,10 +47,10 @@ insert into student(name,age,sex) values
 ("liuxiang",19,'W');
 
 insert into course(cname,credit) values
-("C++»ù´¡",5),
-("C++¸ß¼¶",10),
-("C++ÏîÄ¿",8),
-("C++Ëã·¨",12);
+("C++åŸºç¡€",5),
+("C++é«˜çº§",10),
+("C++é¡¹ç›®",8),
+("C++ç®—æ³•",12);
 
 insert into exame(uid ,cid,time,score) values
 (1,1,'2023-06-10',99.0),
@@ -67,53 +67,53 @@ insert into exame(uid ,cid,time,score) values
 (5,4,'2023-06-10',95.0);
 
 ```
-ÒÑÖªuidÊÇ1£¬cid:2  
-²é¿´zhangsanÍ¬Ñ§¿ÎµÄ³É¼¨£º  
+å·²çŸ¥uidæ˜¯1ï¼Œcid:2  
+æŸ¥çœ‹zhangsanåŒå­¦è¯¾çš„æˆç»©ï¼š  
 > select score from exame where uid = 1 and cid = 2;    
 
-Ö»ÏÔÊ¾ÁË³É¼¨ĞÅÏ¢¡£  
-ÏÖÔÚÏë²éÑ§ÉúµÄ¸öÈËĞÅÏ¢ºÍ¿Î³Ì³É¼¨  
-µ¥±í²éÑ¯  
+åªæ˜¾ç¤ºäº†æˆç»©ä¿¡æ¯ã€‚  
+ç°åœ¨æƒ³æŸ¥å­¦ç”Ÿçš„ä¸ªäººä¿¡æ¯å’Œè¯¾ç¨‹æˆç»©  
+å•è¡¨æŸ¥è¯¢  
 > select a.uid,a.name,a.age,a.sex from student as a where a.uid = 1;  
 select c.score from exame as c where c.uid = 1 and c.cid = 2;  
 
-Á¬½Ó²éÑ¯
+è¿æ¥æŸ¥è¯¢
 > select a.uid,a.name,a.age,a.sex,c.score from student as a   
 inner join exame as c on a.uid = c.uid where c.uid = 1 and c.cid = 2;    
 
-Í¨¹ıon a.uid = c.uid ½øĞĞÁ¬½Ó  
-°´ÕÕÊı¾İÁ¿µÄ¶àÉÙÇø·Ö´ó±íºÍĞ¡±í£¬Ğ¡±íÓÀÔ¶ÊÇÕû±íÉ¨Ãè£¬È»ºóÈ¥´ó±íËÑË÷
+é€šè¿‡on a.uid = c.uid è¿›è¡Œè¿æ¥  
+æŒ‰ç…§æ•°æ®é‡çš„å¤šå°‘åŒºåˆ†å¤§è¡¨å’Œå°è¡¨ï¼Œå°è¡¨æ°¸è¿œæ˜¯æ•´è¡¨æ‰«æï¼Œç„¶åå»å¤§è¡¨æœç´¢
 
-ÏÖÔÚÏë²éÑ§ÉúµÄ¸öÈËĞÅÏ¢£¬¿Î³ÌĞÅÏ¢ºÍ¿Î³Ì³É¼¨  
-µ¥±í²éÑ¯  
+ç°åœ¨æƒ³æŸ¥å­¦ç”Ÿçš„ä¸ªäººä¿¡æ¯ï¼Œè¯¾ç¨‹ä¿¡æ¯å’Œè¯¾ç¨‹æˆç»©  
+å•è¡¨æŸ¥è¯¢  
 > select a.uid,a.name,a.age,a.sex from student as a where a.uid = 1;  
 select c.score from exame as c where c.uid = 1 and c.cid = 2;  
 select b.cid ,b.cname,b.credit from course as b where b.cid = 2;  
 
-Á¬½Ó²éÑ¯  
+è¿æ¥æŸ¥è¯¢  
 > select a.uid,a.name,b.cname,b.credit,c.score   
 from exame as c   
 inner join student as a on c.uid = a.uid   
 inner join course b on c.cid = b.cid  
 where c.uid = 1 and c.cid = 2;    
-Ö÷±íĞ´ÔÚ×îÇ°Ãæ£¬ÓÃÖ÷±íÁ¬½ÓÆäËû×Ó±í
+ä¸»è¡¨å†™åœ¨æœ€å‰é¢ï¼Œç”¨ä¸»è¡¨è¿æ¥å…¶ä»–å­è¡¨
 
-²é¿´uid=2µÄ¿Î³ÌÒ»¹²ÓĞ¶àÉÙÈË½øĞĞ¿¼ÊÔ  
-> select b.cid,b.cname,b.credit,count(b.cid) as '¿¼ÊÔÈËÊı'   
+æŸ¥çœ‹uid=2çš„è¯¾ç¨‹ä¸€å…±æœ‰å¤šå°‘äººè¿›è¡Œè€ƒè¯•  
+> select b.cid,b.cname,b.credit,count(b.cid) as 'è€ƒè¯•äººæ•°'   
 from exame as a  
 inner join course as b on a.cid = b.cid  
 group by b.cid  
 having b.cid = 2;
 
-²é¿´uid=2µÄ¿Î³Ì³É¼¨´óÓÚ90µÄÈËÓĞ¶àÉÙ  
-> select b.cid,b.cname,b.credit,count(b.cid) as '¿¼ÊÔÈËÊı'   
+æŸ¥çœ‹uid=2çš„è¯¾ç¨‹æˆç»©å¤§äº90çš„äººæœ‰å¤šå°‘  
+> select b.cid,b.cname,b.credit,count(b.cid) as 'è€ƒè¯•äººæ•°'   
 from exame as a  
 inner join course as b on a.cid = b.cid  
 where a.score >= 90  
 group by b.cid  
 having b.cid = 2;  
 
-ÁĞ³öuid=2µÄ¿Î³Ì³É¼¨´óÓÚ90µÄÈË  
+åˆ—å‡ºuid=2çš„è¯¾ç¨‹æˆç»©å¤§äº90çš„äºº  
 > select c.uid,c.name,b.cid,b.cname,a.score   
 from exame as a  
 inner join course as b on a.cid = b.cid  
@@ -123,45 +123,45 @@ order by a.score desc;
 
 
 
-#### µ¥ÕÅ±íµÄÄÚÁ¬½Ó
+#### å•å¼ è¡¨çš„å†…è¿æ¥
 > select a.id,a.email,a.password from user_t as a   
 inner join (select id from user_t limit 15000,10) as b   
 on a.id = b.id;  
 
-### ÍâÁ¬½Ó²éÑ¯
+### å¤–è¿æ¥æŸ¥è¯¢
 > select a.* , b.* from student as a  
 inner join exame as b  
 on a.uid = b.uid;   
 
-#### leftÁ¬½Ó²éÑ¯
-°ÑleftÕâ±ßµÄ±íµÄËùÓĞ×Ö¶ÎÏÔÊ¾³öÀ´£¬ÔÚright±íÖĞ²»´æÔÚÏàÓ¦Êı¾İÔòÏÔÊ¾null
+#### leftè¿æ¥æŸ¥è¯¢
+æŠŠleftè¿™è¾¹çš„è¡¨çš„æ‰€æœ‰å­—æ®µæ˜¾ç¤ºå‡ºæ¥ï¼Œåœ¨rightè¡¨ä¸­ä¸å­˜åœ¨ç›¸åº”æ•°æ®åˆ™æ˜¾ç¤ºnull
 > select a.* , b.* from student as a  
 left join exame as b  
 on a.uid = b.uid;  
 
-²éÑ¯Ã»ÓĞ²Î¼Ó¿¼ÊÔµÄÍ¬Ñ§  
+æŸ¥è¯¢æ²¡æœ‰å‚åŠ è€ƒè¯•çš„åŒå­¦  
 > select * from student where uid not in (select distinct uid from exame);    
-not in Ã»ÓĞ°ì·¨½¨Á¢Ë÷Òı£¬¶øÇÒ¶ÔÓÚË÷ÒıµÄÃüÖĞ²¢²»¸ß£¬Òò´Ë²éÑ¯ËÙ¶ÈÂı£¬
-ËùÒÔ¶à±í²éÑ¯Ò»°ã²»ÓÃ´øinµÄ×Ó²éÑ¯    
+not in æ²¡æœ‰åŠæ³•å»ºç«‹ç´¢å¼•ï¼Œè€Œä¸”å¯¹äºç´¢å¼•çš„å‘½ä¸­å¹¶ä¸é«˜ï¼Œå› æ­¤æŸ¥è¯¢é€Ÿåº¦æ…¢ï¼Œ
+æ‰€ä»¥å¤šè¡¨æŸ¥è¯¢ä¸€èˆ¬ä¸ç”¨å¸¦inçš„å­æŸ¥è¯¢    
 select a.* from student as a  
 left join exame as b   
 on a.uid = b.uid  
 where b.cid is null;  
 
 
-#### rightÁ¬½Ó²éÑ¯
-°ÑrightÕâ±ßµÄ±íµÄËùÓĞ×Ö¶ÎÏÔÊ¾³öÀ´£¬ÔÚleft±íÖĞ²»´æÔÚÏàÓ¦Êı¾İÔòÏÔÊ¾null
+#### rightè¿æ¥æŸ¥è¯¢
+æŠŠrightè¿™è¾¹çš„è¡¨çš„æ‰€æœ‰å­—æ®µæ˜¾ç¤ºå‡ºæ¥ï¼Œåœ¨leftè¡¨ä¸­ä¸å­˜åœ¨ç›¸åº”æ•°æ®åˆ™æ˜¾ç¤ºnull
 > select a.* , b.* from student as a  
 right join exame as b  
 on a.uid = b.uid;  
 
 
-²éÑ¯Ã»ÓĞ²Î¼Ó¹ıcid=2ºÍcid=3¿Î³ÌµÄÑ§ÉúĞÅÏ¢  
+æŸ¥è¯¢æ²¡æœ‰å‚åŠ è¿‡cid=2å’Œcid=3è¯¾ç¨‹çš„å­¦ç”Ÿä¿¡æ¯  
 > select a.* from student as a  
 left join exame as b  
 on a.uid = b.uid and b.cid = 3  
 where b.cid is null;    
-°ÑÍâÁ¬½ÓÌõ¼ş¹ıÂËb.cid=3Ğ´ÔÚÁ¬½ÓÌõ¼ş´¦£¬·ñÔòleft joinºÍinner joinÃ»ÓĞÇø±ğ  
+æŠŠå¤–è¿æ¥æ¡ä»¶è¿‡æ»¤b.cid=3å†™åœ¨è¿æ¥æ¡ä»¶å¤„ï¼Œå¦åˆ™left joinå’Œinner joinæ²¡æœ‰åŒºåˆ«  
 
 
 
